# exchange

./: README.md
.github/workflows/: codeql-analysis.yml
backend/: Cargo.toml
backend/src/: lib.rs  main.rs
backend/src/common/: events.rs  mod.rs
backend/src/match_engine/: mod.rs  orderbook.rs
backend/src/order_server/: mod.rs  order_handler.rs  ws_server.rs
backend/tests/: random_buy_sell.rs
doc/: arch.drawio
web/: package-lock.json  package.json  rollup.config.js
web/public/: index.html
web/src/: App.svelte  main.js
web/src/lib/: client.js  codec.js  data.js  types.js  ws.js
