[package]
name = "exchange"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_decimal = "1.15"
rust_decimal_macros = "1.15"
rand = "0.8.4"
rdkafka = { version = "0.25", features = ["cmake-build"] }
actix = "0.10"
actix-codec = "0.3"
actix-web = "3"
actix-web-actors = "3"
actix-files = "0.3"
awc = "2"
log = "0.4"
env_logger = "0.9"
futures = "0.3.1"
bytes = "0.5.3"
display_derive = "0.0.0"
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
rmp-serde = "0.15.5"

[[bin]]
name = "exchange"
path = "src/main.rs"

[[bin]]
name = "match-engine"
path = "src/match_engine/bin/main.rs"

[[bin]]
name = "order-server"
path = "src/order_server/bin/main.rs"

[[bin]]
name = "order-validator"
path = "src/order_validator/bin/main.rs"

[[bin]]
name = "market-updater"
path = "src/market_updater/bin/main.rs"

[[bin]]
name = "db-updater"
path = "src/db_updater/bin/main.rs"

[[bin]]
name = "market-server"
path = "src/db_updater/bin/main.rs"